--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
   <title>User Page</title>
@@ -14,6 +15,7 @@
 <div class="container">
 
   <form th:action="@{/logout}" method="get">
+    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
     <button class="btn btn-md btn-danger btn-block" name="registration"
             type="Submit">Logout
     </button>
@@ -22,13 +24,17 @@
   <div class="panel-group" style="margin-top:40px">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <span th:utext="${userName}"></span>
+        <span th:utext="Welcome"></span> <span sec:authentication="name"></span>
       </div>
       <div class="panel-body">
         <img th:src="@{/images/beer.jpg}" class="img-responsive center-block" width="400" height="400"
              alt="Beer"/>
       </div>
-      <p class="admin-message-text text-center" th:utext="${userMessage}"></p>
+
+      <div sec:authorize="isAuthenticated()">
+        <p class="admin-message-text text-center">Content Available Only for Users with User Role</p>
+      </div>
+
     </div>
   </div>
 
