--- a/src/main/resources/templates/user/addUserDetails.html
+++ b/src/main/resources/templates/user/addUserDetails.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Login Form</title>
+    <title>User Details Form</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/login.css}"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -11,20 +11,23 @@
 </head>
 
 <body>
-<form th:action="@{/registration}" method="get">
-    <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Registration Page</button>
-</form>
+<form th:action="@{/user/home}" method="get">
+    <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Home</button>
+</form><br/>
 
 <div class="container">
-    <img th:src="@{/images/login.jpg}" class="img-responsive center-block" width="300" height="300" alt="Logo"/>
     <form th:action="@{/login}" method="POST" class="form-signin">
-        <h3 class="form-signin-heading" th:text="Welcome"></h3>
+        <h3 class="form-signin-heading">Add User Details</h3>
         <br/>
-        <input type="text" id="user_name" name="user_name" placeholder="User Name"
+
+        <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+        <input type="hidden" name="id" value="${id}"/>
+
+        <label for="gender">Gender</label>
+        <input type="radio" id="gender" name="user_name" items="${genders}"
                class="form-control"/> <br/>
         <input type="password" th:placeholder="Password"
                id="password" name="password" class="form-control"/> <br/>
-        <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
         <div align="center" th:if="${param.error}">
             <p style="font-size: 20px; color: #FF1C19;">User Name or Password invalid, please verify</p>
         </div>
