AddUserDetails form: ActivityLevel added

--- a/src/main/resources/templates/user/addUserDetails.html
+++ b/src/main/resources/templates/user/addUserDetails.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>User Details Form</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/login.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/details.css}"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -19,9 +19,7 @@
 <div class="container">
     <form th:action="@{/login}" method="post" class="form-signin" th:object="${userDetails}">
         <h3 class="form-signin-heading">User Details</h3>
-        <br/>
         <input type="hidden" name="id" value="${id}"/>
-
         <label>Gender:</label>
         <div th:each="gender: ${genders}">
             <div>
@@ -29,22 +27,40 @@
                 <label th:text="${gender.name}"></label>
             </div>
         </div>
-
+        <br/>
         <label>Age:</label>
         <input type="number" th:field="*{age}" min="0" max="150" step="1"/><br/>
-
+        <br/>
         <label>Height:</label>
         <input type="number" th:field="*{height}" min="0" max="200" step="1"/><br/>
-
+        <br/>
         <label>Dream weight:</label>
         <input type="number" th:field="*{dreamWeight}" min="0" max="200" step="0.1"/><br/>
-
-<!--        <div th:each="level: ${activityLevels}">
-            <label>Activity level:</label>
-            <select th:field="*{activityLevel}" th:value="${level.value}"/>
-            <label th:text="${level.name}"></label><br/>
-        </div>-->
-
+        <br/>
+        <div>
+            <label>Activity Level:
+                <div>
+                    <select th:field="*{activityLevel}">
+                        <option th:each="level : ${activityLevels}"
+                                th:text="${level.name + ' - ' + level.description}"
+                                th:value="${level.value}">
+                    </select>
+                </div>
+            </label>
+        </div>
+        <br/>
+        <div>
+            <label>Cuisine Type:
+                <div>
+                    <select th:field="*{activityLevel}">
+                        <option th:each="level : ${activityLevels}"
+                                th:text="${level.name + ' - ' + level.description}"
+                                th:value="${level.value}">
+                    </select>
+                </div>
+            </label>
+        </div>
+        <br/>
 
         <button class="btn btn-lg btn-primary btn-block" name="Submit" value="Add User Details" type="Submit"
         >Save User Details
