--- a/src/main/resources/static/css/details.css
+++ b/src/main/resources/static/css/details.css
@@ -29,8 +29,8 @@ input[type="text"] {
     border-bottom-right-radius: 0;
 }
 
-input[type="password"] {
-    margin-bottom: 20px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
+.validation-message {
+    font-style: normal;
+    font-size: 12px;
+    color: #FF1C19;
 }
