Dashboard in progress

--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -4,39 +4,40 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-  <title>User Page</title>
-  <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <title>User Page</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
 <div class="container">
 
-  <form th:action="@{/logout}" method="get">
-    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
-    <button class="btn btn-md btn-danger btn-block" name="registration"
-            type="Submit">Logout
-    </button>
-  </form>
+    <form th:action="@{/logout}" method="get">
+        <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+        <button class="btn btn-md btn-danger btn-block" name="registration"
+                type="Submit">Logout
+        </button>
+    </form>
 
-  <div class="panel-group" style="margin-top:40px">
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <span th:utext="Welcome"></span> <span sec:authentication="name"></span>
-      </div>
-      <div class="panel-body">
-        <img th:src="@{/images/beer.jpg}" class="img-responsive center-block" width="400" height="400"
-             alt="Beer"/>
-      </div>
-
-      <div sec:authorize="isAuthenticated()">
-        <p class="admin-message-text text-center">Content Available Only for Users with User Role</p>
-      </div>
-
+    <div class="panel-group" style="margin-top:40px">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <span th:utext="Welcome"></span> <span sec:authentication="name"></span>
+            </div>
+            <div class="panel-body">
+                <div>What is your dream weight?</div>
+              <br/>
+                <div>
+                    <ul>Let us know you better, so we can:
+                        <li>suggest you a diet plan that suits your needs</li>
+                        <li>show you when you will achieve your dream weight</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 
 </div>
 </body>
