addLatestWeight form in progress

--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -49,7 +49,7 @@
                 <br/>
                 <div>You will achieve your dream weight on (calculated success date)</div>
                 <br/>
-                <form th:action="@{/user/weight/add}" method="get">
+                <form th:action="@{/user/weight}" method="get">
                     <button class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit">Add Latest Weight
                     </button>
                 </form>
