--- a/src/main/resources/templates/weight/edit.html
+++ b/src/main/resources/templates/weight/edit.html
@@ -19,7 +19,7 @@
      <form th:action="@{/user/weight}" method="POST" class="form-signin">
         <h3 class="form-signin-heading">Add new weight</h3>
         <br/>
-         <div th:object="${latestWeight}">ready
+         <div th:object="${latestWeight}">
              <label>Current weight (kg):
                  <input type="number" th:field="*{weight}" min="0" max="200" step="0.1"/><br/>
                  <label th:if="${#fields.hasErrors('weight')}" th:errors="*{weight}"
@@ -33,7 +33,8 @@
              </label>
          </div>
          <br/><br/>
-        <button class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit">Add weight</button>
+        <button class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit"
+                th:text="Add weight"></button>
     </form>
 </div>
 </body>
