--- a/src/main/resources/templates/weight/edit.html
+++ b/src/main/resources/templates/weight/edit.html
@@ -16,25 +16,27 @@
 </form>
 <br/>
 <div class="container">
-     <form th:action="@{/user/weight}" method="POST" class="form-signin">
+    <form th:action="@{/user/weight}" method="POST" class="form-signin">
         <h3 class="form-signin-heading">Add new weight</h3>
         <br/>
-         <div th:object="${latestWeight}">
-             <label>Current weight (kg):
-                 <input type="number" th:field="*{weight}" min="0" max="200" step="0.1"/><br/>
-                 <label th:if="${#fields.hasErrors('weight')}" th:errors="*{weight}"
-                        class="validation-message"></label>
-             </label>
-             <br/><br/>
-             <label>Weighting date:
-                 <input type="datetime-local" th:field="*{weightingDate}"/><br/>
-                 <label th:if="${#fields.hasErrors('weightingDate')}" th:errors="*{weightingDate}"
-                        class="validation-message"></label>
-             </label>
-         </div>
-         <br/><br/>
-        <button class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit"
-                th:text="Add weight"></button>
+        <div th:object="${latestWeight}">
+            <input type="hidden" th:field="*{id}">
+            <label>Current weight (kg):
+                <input type="number" th:field="*{weight}" min="0" max="200" step="0.1"/><br/>
+                <label th:if="${#fields.hasErrors('weight')}" th:errors="*{weight}"
+                       class="validation-message"></label>
+            </label>
+            <br/><br/>
+            <label>Weighting date:
+                <input type="datetime-local" th:field="*{weightingDate}"/><br/>
+                <label th:if="${#fields.hasErrors('weightingDate')}" th:errors="*{weightingDate}"
+                       class="validation-message"></label>
+            </label>
+        </div>
+        <br/><br/>
+        <button class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit">
+            Edit weight
+        </button>
     </form>
 </div>
 </body>
