--- a/src/main/resources/templates/weight/edit.html
+++ b/src/main/resources/templates/weight/edit.html
@@ -35,7 +35,7 @@
         </div>
         <br/><br/>
         <button class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit">
-            Edit weight
+            Save weight
         </button>
     </form>
 </div>
