weight history with CRUD on latestWeight

--- a/src/main/resources/templates/weight/add.html
+++ b/src/main/resources/templates/weight/add.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-<form th:action="@{/user/home}" method="get">
-    <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Home Page</button>
+<form th:action="@{/user/weight/history}" method="get">
+    <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Weight History</button>
 </form>
 <br/>
 <div class="container">
@@ -33,7 +33,7 @@
              </label>
          </div>
          <br/><br/>
-        <button class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit">Add weight</button>
+        <button class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit">Save weight</button>
     </form>
 </div>
 </body>
