--- a/src/main/resources/templates/weight/history.html
+++ b/src/main/resources/templates/weight/history.html
@@ -1,30 +1,56 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <meta charset="ISO-8859-1">
-    <title>High Chart Example - Spring Boot</title>
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <title>Weight history</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/details.css}"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet"
           href="https://code.highcharts.com/css/highcharts.css" />
-    <script
-            src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script
-            src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-</head>
-<body>
-<div align="center">
-    <h2>User weight history</h2>
-</div>
-<figure class="highcharts-figure">
-    <div id="container-bar"></div>
-</figure>
-<script type="text/javascript" src="/js/highcharts.js"></script>
 
+</head>
+
+<body>
+<form th:action="@{/user/home}" method="get">
+    <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Home Page</button>
+</form>
+<br/>
+<div class="container">
+    <h3 class="form-signin-heading">Weight history</h3>
+    <br/>
+    <figure class="highcharts-figure">
+        <div id="container-bar"></div>
+    </figure>
+    <br/>
+    <form th:action="@{/user/weight}" method="get">
+        <button class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit">Add New Weight
+        </button>
+    </form>
+    <br/>
+    <div>Full history:
+        <span th:if="${latestWeightsDesc.isEmpty()}">no records</span>
+        <table>
+            <tr>
+                <th>Weight </th>
+                <th>Date</th>
+            </tr>
+            <tr th:each="weight : ${latestWeightsDesc}">
+                <td th:text="${weight.weight}"></td>
+                <td th:text="${weight.weightingDate}"></td>
+                <td><a th:href="@{/user/weight/edit(id=${weight.id})}">Edit </a></td>
+                <td><a th:href="@{/user/weight/delete(id=${weight.id})}" onclick="return confirm('Are you sure?')">Remove</a></td>
+            </tr>
+        </table>
+    </div>
+
+</div>
+<script type="text/javascript" src="/js/highcharts.js"></script>
 </body>
 </html>
