--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -40,11 +40,11 @@
                 </form>
             </div>
             <div th:if="${userDetails != null}" class="panel-body">
-                <div>Suggested daily intake of calories: <span th:text="${userDetails.dailyCalories}"></span> kcal</div>
+                <div>Suggested daily intake of calories: <b th:text="${userDetails.dailyCalories}"></b> kcal</div>
                 <br/>
-                <div>Your latest weight: <span th:text="${latestWeight.weight}"></span> kg</div>
-                <div>Your dream weight: <span th:text="${userDetails.dreamWeight}"></span> kg</div>
-                <div>Your activity level: <span th:text="${userDetails.activityLevel.name}"></span></div>
+                <div>Your latest weight: <b th:text="${latestWeight.weight}"></b> kg</div>
+                <div>Your dream weight: <b th:text="${userDetails.dreamWeight}"></b> kg</div>
+                <div>Your activity level: <b th:text="${userDetails.activityLevel.name}"></b></div>
                 <br/>
                 <div>You will achieve your dream weight on (calculated success date)</div>
                 <br/>
@@ -54,18 +54,18 @@
                 </form>
                 <br/>
                 <ul>Your preferences:
-                    <li th:text="${'cuisine type: ' + userDetails.cuisineType.name}"></li>
+                    <li>cuisine type: <b th:text="${userDetails.cuisineType.name}"/></li>
                     <li>allergies and health issues:
                         <span th:if="${userDetails.healths.isEmpty()}">none</span>
-                        <span th:each="health : ${userDetails.healths}">
+                        <b th:each="health : ${userDetails.healths}">
                         <div th:text="${health.name}"></div>
-                        </span>
+                        </b>
                     </li>
                     <li>diets:
                         <span th:if="${userDetails.diets.isEmpty()}">none</span>
-                        <span th:each="diet : ${userDetails.diets}">
+                        <b th:each="diet : ${userDetails.diets}">
                         <div th:text="${diet.name}"></div>
-                        </span>
+                        </b>
                     </li>
                 </ul>
                 <br/>
