--- a/src/main/resources/templates/userDetails/add.html
+++ b/src/main/resources/templates/userDetails/add.html
@@ -42,6 +42,7 @@
         <br/><br/>
         <div th:object="${latestWeight}">
             <label>Current weight (kg):
+                <input type="hidden" th:field="*{weightingDate}">
                 <input type="number" th:field="*{weight}" min="0" max="200" step="0.1"/><br/>
                 <label th:if="${#fields.hasErrors('weight')}" th:errors="*{weight}"
                        class="validation-message"></label>
