Creating a weekly diet plan

--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -79,7 +79,7 @@
                     </button>
                 </form>
                 <br/>
-                <form th:action="@{/user/plan/add}" method="get">
+                <form th:action="@{/user/plan/new}" method="get">
                     <button class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit">New Diet Plan
                     </button>
                 </form>
